@@ -1,7 +1,7 @@
 #ifndef SSDB_DEPS_H
 #ifndef SSDB_VERSION
 #define SSDB_VERSION "1.6.8.6"
+#endif
+#endif
 #include <stdlib.h>
 #include <jemalloc/jemalloc.h>
-#endif
-#endif
